--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ v2, dev, main, release ]
+    branches: [ v2, dev, main, release, ga ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ v2, dev, release ]
+    branches: [ v2, dev, release, ga]
   schedule:
     - cron: '41 12 * * 0'
 
