--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -23,8 +23,13 @@
     "tslib": "^2.0.0",
     "typescript": "^4.2.4"
   },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
   "scripts": {
-	"dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
+    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions",
+    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -54,6 +59,6 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^4.3.3",
-	"env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0"
   }
 }
