--- a/adaptive-card-notification/bot/package.json
+++ b/adaptive-card-notification/bot/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.9.0",
     "@microsoft/adaptivecards-tools": "^0.1.3",
     "@microsoft/teamsfx": "0.6.3-alpha.768a76f6e.0",
     "botbuilder": "~4.15.0"
