--- a/todo-list-with-Azure-backend-M365/.gitignore
+++ b/todo-list-with-Azure-backend-M365/.gitignore
@@ -1,3 +1,4 @@
+# TeamsFx files
 node_modules
 /.fx/*.env
 /.fx/*.userdata
@@ -7,3 +8,4 @@ node_modules
 **/.env.teamsfx.local
 .fx/configs/config.local.json
 .fx/states/state.local.json
+build
