--- a/todo-list-with-Azure-backend-M365/.vscode/launch.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/launch.json
@@ -2,27 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Remote (Edge)",
-            "type": "pwa-msedge",
-            "request": "launch",
-            "url": "https://teams.microsoft.com/l/app/${teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "presentation": {
-                "group": "remote",
-                "order": 1
-            }
-        },
-        {
-            "name": "Launch Remote (Chrome)",
-            "type": "pwa-chrome",
-            "request": "launch",
-            "url": "https://teams.microsoft.com/l/app/${teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "presentation": {
-                "group": "remote",
-                "order": 2
-            }
-        },
-        {
-            "name": "Attach to Frontend (Edge)",
+            "name": "Attach to Frontend in Teams (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
@@ -35,10 +15,62 @@
             }
         },
         {
-            "name": "Attach to Frontend (Chrome)",
+            "name": "Attach to Frontend in Teams (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            }
+        },
+        {
+            "name": "Attach to Frontend in Outlook (Edge)",
+            "type": "pwa-msedge",
+            "request": "launch",
+            "url": "https://outlook.office.com/host/${localTeamsAppInternalId}?${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            }
+        },
+        {
+            "name": "Attach to Frontend in Outlook (Chrome)",
+            "type": "pwa-chrome",
+            "request": "launch",
+            "url": "https://outlook.office.com/host/${localTeamsAppInternalId}?${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            }
+        },
+        {
+            "name": "Attach to Frontend in Office (Edge)",
+            "type": "pwa-msedge",
+            "request": "launch",
+            "url": "https://www.office.com/m365apps/${localTeamsAppInternalId}?auth=2&${account-hint}",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
+            "presentation": {
+                "group": "all",
+                "hidden": true
+            }
+        },
+        {
+            "name": "Attach to Frontend in Office (Chrome)",
+            "type": "pwa-chrome",
+            "request": "launch",
+            "url": "https://www.office.com/m365apps/${localTeamsAppInternalId}?auth=2&${account-hint}",
             "cascadeTerminateToConfigurations": [
                 "Attach to Backend"
             ],
@@ -62,27 +94,79 @@
     ],
     "compounds": [
         {
-            "name": "Debug (Edge)",
+            "name": "Debug in Teams (Edge)",
             "configurations": [
-                "Attach to Frontend (Edge)",
+                "Attach to Frontend in Teams (Edge)",
                 "Attach to Backend"
             ],
             "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
-                "group": "all",
+                "group": "group 1: Teams",
                 "order": 1
             },
             "stopAll": true
         },
         {
-            "name": "Debug (Chrome)",
+            "name": "Debug in Teams (Chrome)",
             "configurations": [
-                "Attach to Frontend (Chrome)",
+                "Attach to Frontend in Teams (Chrome)",
                 "Attach to Backend"
             ],
             "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
-                "group": "all",
+                "group": "group 1: Teams",
+                "order": 2
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Outlook (Edge)",
+            "configurations": [
+                "Attach to Frontend in Outlook (Edge)",
+                "Attach to Backend"
+            ],
+            "preLaunchTask": "Pre Debug Check & Start All & Install App",
+            "presentation": {
+                "group": "group 2: Outlook",
+                "order": 1
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Outlook (Chrome)",
+            "configurations": [
+                "Attach to Frontend in Outlook (Chrome)",
+                "Attach to Backend"
+            ],
+            "preLaunchTask": "Pre Debug Check & Start All & Install App",
+            "presentation": {
+                "group": "group 2: Outlook",
+                "order": 2
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Office (Edge)",
+            "configurations": [
+                "Attach to Frontend in Office (Edge)",
+                "Attach to Backend"
+            ],
+            "preLaunchTask": "Pre Debug Check & Start All & Install App",
+            "presentation": {
+                "group": "group 3: Office",
+                "order": 1
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Debug in Office (Chrome)",
+            "configurations": [
+                "Attach to Frontend in Office (Chrome)",
+                "Attach to Backend"
+            ],
+            "preLaunchTask": "Pre Debug Check & Start All & Install App",
+            "presentation": {
+                "group": "group 3: Office",
                 "order": 2
             },
             "stopAll": true
