--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -11,6 +11,16 @@
             "dependsOrder": "sequence"
         },
         {
+            "label": "Pre Debug Check & Start All & Install App",
+            "dependsOn": [
+                "validate local prerequisites",
+                "prepare local environment",
+                "Start All",
+                "install app in Teams"
+            ],
+            "dependsOrder": "sequence"
+        },
+        {
             "label": "validate local prerequisites",
             "type": "shell",
             "command": "exit ${command:fx-extension.validate-local-prerequisites}",
@@ -32,6 +42,14 @@
                 "Start Frontend",
                 "Start Backend"
             ]
+        },
+        {
+            "label": "install app in Teams",
+            "type": "shell",
+            "command": "exit ${command:fx-extension.install-app-in-teams}",
+            "presentation": {
+                "reveal": "never"
+            }
         },
         {
             "label": "Start Frontend",
