--- a/NPM-search-connector-M365/.fx/configs/projectSettings.json
+++ b/NPM-search-connector-M365/.fx/configs/projectSettings.json
@@ -10,13 +10,21 @@
         ],
         "activeResourcePlugins": [
             "fx-resource-bot",
-            "fx-resource-aad-app-for-teams",
             "fx-resource-identity",
             "fx-resource-local-debug",
-            "fx-resource-appstudio"
+            "fx-resource-appstudio",
+            "fx-resource-cicd",
+            "fx-resource-api-connector"
         ]
     },
     "version": "2.0.0",
     "isFromSample": true,
-    "programmingLanguage": "javascript"
+    "isM365": true,
+    "programmingLanguage": "javascript",
+    "pluginSettings": {
+        "fx-resource-bot": {
+            "host-type": "app-service",
+            "capabilities": []
+        }
+    }
 }
