chore: merge ga to dev (#365)
* feat: add notification storage implemenation sample

* chore(m365): update todo list sample

- update tasks.json and launch.json to support F5
- update README
- add aad template

* chore(m365): update npm search sample

- update tasks.json and launch.json to support F5
- update README
- remote add plugin
- remote create card, share message and link

* chore(m365): update manifest and bicep

* chore: tweak comment

Co-authored-by: Dooriya Li <dol@microsoft.com>

* chore: tweak code line location

* chore(deps): bump cross-fetch from 3.1.4 to 3.1.5 in /faq-plus/bot

Bumps [cross-fetch](https://github.com/lquixada/cross-fetch) from 3.1.4 to 3.1.5.
- [Release notes](https://github.com/lquixada/cross-fetch/releases)
- [Commits](https://github.com/lquixada/cross-fetch/compare/v3.1.4...v3.1.5)

---
updated-dependencies:
- dependency-name: cross-fetch
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: Qianhao Dong <qidon@microsoft.com>
Co-authored-by: Kuojian Lu <kuojianlu@gmail.com>
Co-authored-by: Qianhao Dong <09122SWAT@gmail.com>
Co-authored-by: Dooriya Li <dol@microsoft.com>
Co-authored-by: Jason Zhu <jasoz@microsoft.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Wei Shen <shenwe@microsoft.com>

--- a/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend-M365/.fx/configs/projectSettings.json
@@ -5,7 +5,8 @@
         "version": "1.0.0",
         "hostType": "Azure",
         "capabilities": [
-            "Tab"
+            "Tab",
+            "TabSSO"
         ],
         "azureResources": [
             "function"
@@ -16,10 +17,13 @@
             "fx-resource-aad-app-for-teams",
             "fx-resource-function",
             "fx-resource-local-debug",
-            "fx-resource-appstudio"
+            "fx-resource-appstudio",
+            "fx-resource-cicd",
+            "fx-resource-api-connector"
         ]
     },
     "isFromSample": true,
+    "isM365": true,
     "programmingLanguage": "javascript",
     "defaultFunctionName": "getUserProfile",
     "version": "2.1.0"
