--- a/adaptive-card-notification/templates/appPackage/manifest.template.json
+++ b/adaptive-card-notification/templates/appPackage/manifest.template.json
@@ -42,9 +42,5 @@
         "identity",
         "messageTeamMembers"
     ],
-    "validDomains": [],
-    "webApplicationInfo": {
-        "id": "{{state.fx-resource-aad-app-for-teams.clientId}}",
-        "resource": "{{{state.fx-resource-aad-app-for-teams.applicationIdUris}}}"
-    }
+    "validDomains": []
 }
