chore(bot-sso): update aad config files

--- a/bot-sso/.fx/configs/projectSettings.json
+++ b/bot-sso/.fx/configs/projectSettings.json
@@ -5,7 +5,8 @@
         "version": "1.0.0",
         "hostType": "Azure",
         "capabilities": [
-            "Bot"
+            "Bot",
+            "BotSSO"
         ],
         "azureResources": [],
         "activeResourcePlugins": [
@@ -18,5 +19,10 @@
     },
     "isFromSample": true,
     "programmingLanguage": "typescript",
-    "version": "2.0.0"
+    "version": "2.0.0",
+    "pluginSettings": {
+        "fx-resource-bot": {
+            "capabilities": []
+        }
+    }
 }
