--- a/bot-sso/bot/tsconfig.json
+++ b/bot-sso/bot/tsconfig.json
@@ -7,6 +7,7 @@
     "rootDir": "./",
     "sourceMap": true,
     "incremental": true,
-    "tsBuildInfoFile": "./lib/.tsbuildinfo"
+    "tsBuildInfoFile": "./lib/.tsbuildinfo",
+    "skipLibCheck": true
   }
 }
