chore(faq-plus): remove aad plugin files

--- a/faq-plus/templates/appPackage/manifest.template.json
+++ b/faq-plus/templates/appPackage/manifest.template.json
@@ -41,9 +41,5 @@
         "identity",
         "messageTeamMembers"
     ],
-    "validDomains": [],
-    "webApplicationInfo": {
-        "id": "{{state.fx-resource-aad-app-for-teams.clientId}}",
-        "resource": "{{{state.fx-resource-aad-app-for-teams.applicationIdUris}}}"
-    }
+    "validDomains": []
 }
