--- a/faq-plus/.fx/configs/projectSettings.json
+++ b/faq-plus/.fx/configs/projectSettings.json
@@ -8,15 +8,19 @@
             "Bot"
         ],
         "activeResourcePlugins": [
-          "fx-resource-identity",
-          "fx-resource-bot",
-          "fx-resource-aad-app-for-teams",
-          "fx-resource-local-debug",
-          "fx-resource-appstudio"
-      ],
-      "azureResources": []
+            "fx-resource-identity",
+            "fx-resource-bot",
+            "fx-resource-local-debug",
+            "fx-resource-appstudio"
+        ],
+        "azureResources": []
     },
     "isFromSample": true,
     "programmingLanguage": "typescript",
-    "version": "2.0.0"
+    "version": "2.0.0",
+    "pluginSettings": {
+        "fx-resource-bot": {
+            "capabilities": []
+        }
+    }
 }
