chore(todo-list): update aad config files

--- a/todo-list-with-Azure-backend/.fx/configs/projectSettings.json
+++ b/todo-list-with-Azure-backend/.fx/configs/projectSettings.json
@@ -5,7 +5,8 @@
         "version": "1.0.0",
         "hostType": "Azure",
         "capabilities": [
-            "Tab"
+            "Tab",
+            "TabSSO"
         ],
         "azureResources": [
             "sql",
