--- a/hello-world-bot/.fx/configs/projectSettings.json
+++ b/hello-world-bot/.fx/configs/projectSettings.json
@@ -11,12 +11,16 @@
         "activeResourcePlugins": [
             "fx-resource-identity",
             "fx-resource-bot",
-            "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
             "fx-resource-appstudio"
         ]
     },
     "version": "2.0.0",
     "isFromSample": true,
-    "programmingLanguage": "typescript"
+    "programmingLanguage": "typescript",
+    "pluginSettings": {
+        "fx-resource-bot": {
+            "capabilities": []
+        }
+    }
 }
