perf: update to align with latest extension

--- a/hello-world-tab-with-backend/.fx/configs/projectSettings.json
+++ b/hello-world-tab-with-backend/.fx/configs/projectSettings.json
@@ -8,7 +8,8 @@
             "function"
         ],
         "capabilities": [
-            "Tab"
+            "Tab",
+            "TabSSO"
         ],
         "activeResourcePlugins": [
             "fx-resource-frontend-hosting",
