--- a/hello-world-tab/.fx/configs/projectSettings.json
+++ b/hello-world-tab/.fx/configs/projectSettings.json
@@ -6,7 +6,8 @@
         "hostType": "Azure",
         "azureResources": [],
         "capabilities": [
-            "Tab"
+            "Tab",
+            "TabSSO"
         ],
         "activeResourcePlugins": [
             "fx-resource-frontend-hosting",
