chore(sharenow): update aad template

--- a/share-now/.fx/configs/projectSettings.json
+++ b/share-now/.fx/configs/projectSettings.json
@@ -5,7 +5,8 @@
         "version": "1.0.0",
         "capabilities": [
             "Tab",
-            "MessagingExtension"
+            "MessagingExtension",
+            "TabSSO"
         ],
         "hostType": "Azure",
         "azureResources": [
@@ -19,11 +20,18 @@
             "fx-resource-identity",
             "fx-resource-function",
             "fx-resource-aad-app-for-teams",
-            "fx-resource-bot"
+            "fx-resource-bot",
+            "fx-resource-appstudio"
         ]
     },
     "isFromSample": true,
     "programmingLanguage": "typescript",
     "defaultFunctionName": "posts",
-    "version": "2.1.0"
+    "version": "2.1.0",
+    "projectId": "c6dcdffb-f93f-41b7-8469-f1a0980a90eb",
+    "pluginSettings": {
+        "fx-resource-bot": {
+            "capabilities": []
+        }
+    }
 }
