--- a/share-now/.fx/configs/projectSettings.json
+++ b/share-now/.fx/configs/projectSettings.json
@@ -28,10 +28,5 @@
     "programmingLanguage": "typescript",
     "defaultFunctionName": "posts",
     "version": "2.1.0",
-    "projectId": "c6dcdffb-f93f-41b7-8469-f1a0980a90eb",
-    "pluginSettings": {
-        "fx-resource-bot": {
-            "capabilities": []
-        }
-    }
+    "projectId": "e38f688f-651e-47cd-ab80-dde2692d56b4"
 }
