--- a/hello-world-tab/.fx/configs/projectSettings.json
+++ b/hello-world-tab/.fx/configs/projectSettings.json
@@ -1,5 +1,7 @@
 {
     "appName": "Hello_World_Tab",
+    "version": "2.1.0",
+    "isFromSample": true,
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
@@ -14,10 +16,10 @@
             "fx-resource-identity",
             "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
-            "fx-resource-appstudio"
+            "fx-resource-appstudio",
+            "fx-resource-cicd",
+            "fx-resource-api-connector"
         ]
     },
-    "version": "2.1.0",
-    "isFromSample": true,
     "programmingLanguage": "typescript"
 }
