--- a/hello-world-tab/package.json
+++ b/hello-world-tab/package.json
@@ -4,9 +4,7 @@
     "description": "",
     "author": "",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "install:tabs": "cd tabs && npm install",
-        "installAll": "npm run install:tabs"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
         "@microsoft/teamsfx-cli": "1.*"
