--- a/hello-world-tab/tabs/package.json
+++ b/hello-world-tab/tabs/package.json
@@ -12,26 +12,29 @@
     "@microsoft/teamsfx": "^1.0.0",
     "@microsoft/teamsfx-react": "^1.0.0",
     "axios": "^0.21.1",
-    "classnames": "^2.3.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^16.14.6",
     "@types/react-dom": "^16.9.12",
     "@types/react-router-dom": "^5.1.7",
+    "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env react-scripts start",
+    "install:teamsfx": "npm install",
+    "build": "cross-env react-scripts build",
+    "build:teamsfx": "cross-env-shell \"env-cmd -f .env.teamsfx.${TEAMS_FX_ENV} npm run build\"",
+    "build:teamsfx:dev": "cross-env TEAMS_FX_ENV=dev npm run build:teamsfx",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
