--- a/hello-world-tab-with-backend/.vscode/settings.json
+++ b/hello-world-tab-with-backend/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
+    "debug.onTaskErrors": "abort",
+    "json.schemas": [
+        {
+            "fileMatch": [
+                "/aad.*.json"
+            ],
+            "schema": {}
+        }
+    ],
     "azureFunctions.stopFuncTaskPostDebug": false,
     "azureFunctions.showProjectWarning": false,
-    "csharp.suppressDotnetRestoreNotification": true,
-    "debug.onTaskErrors": "abort",
+    "csharp.suppressDotnetRestoreNotification": true
 }
