--- a/hello-world-tab-with-backend/.fx/configs/projectSettings.json
+++ b/hello-world-tab-with-backend/.fx/configs/projectSettings.json
@@ -19,9 +19,7 @@
             "fx-resource-aad-app-for-teams",
             "fx-resource-function",
             "fx-resource-local-debug",
-            "fx-resource-appstudio",
-            "fx-resource-cicd",
-            "fx-resource-api-connector"
+            "fx-resource-appstudio"
         ]
     },
     "programmingLanguage": "typescript",
