--- a/hello-world-tab-without-sso/.fx/configs/projectSettings.json
+++ b/hello-world-tab-without-sso/.fx/configs/projectSettings.json
@@ -14,9 +14,7 @@
             "fx-resource-frontend-hosting",
             "fx-resource-identity",
             "fx-resource-local-debug",
-            "fx-resource-appstudio",
-            "fx-resource-cicd",
-            "fx-resource-api-connector"
+            "fx-resource-appstudio"
         ]
     },
     "programmingLanguage": "typescript"
