--- a/hello-world-tab/.fx/configs/projectSettings.json
+++ b/hello-world-tab/.fx/configs/projectSettings.json
@@ -16,9 +16,7 @@
             "fx-resource-identity",
             "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
-            "fx-resource-appstudio",
-            "fx-resource-cicd",
-            "fx-resource-api-connector"
+            "fx-resource-appstudio"
         ]
     },
     "programmingLanguage": "typescript"
