fix: support npm lower than 6

--- a/hello-world-tab-with-backend/tabs/package.json
+++ b/hello-world-tab-with-backend/tabs/package.json
@@ -12,6 +12,7 @@
     "@microsoft/teamsfx": "^1.0.0",
     "@microsoft/teamsfx-react": "^1.0.0",
     "axios": "^0.21.1",
+    "msteams-react-base-component": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
