chore: update hello world bot sample

--- a/hello-world-bot/bot/tsconfig.json
+++ b/hello-world-bot/bot/tsconfig.json
@@ -8,6 +8,8 @@
     "sourceMap": true,
     "incremental": true,
     "tsBuildInfoFile": "./lib/.tsbuildinfo",
-    "skipLibCheck": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
   }
 }
