--- a/hello-world-bot/.fx/configs/projectSettings.json
+++ b/hello-world-bot/.fx/configs/projectSettings.json
@@ -1,5 +1,7 @@
 {
     "appName": "HelloWorldBot",
+    "version": "2.1.0",
+    "isFromSample": true,
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
@@ -12,14 +14,14 @@
             "fx-resource-identity",
             "fx-resource-bot",
             "fx-resource-local-debug",
-            "fx-resource-appstudio"
+            "fx-resource-appstudio",
+            "fx-resource-api-connector"
         ]
     },
-    "version": "2.0.0",
-    "isFromSample": true,
     "programmingLanguage": "typescript",
     "pluginSettings": {
         "fx-resource-bot": {
+            "host-type": "app-service",
             "capabilities": []
         }
     }
