--- a/hello-world-bot/package.json
+++ b/hello-world-bot/package.json
@@ -1,12 +1,10 @@
 {
-    "name": "HelloWorldBot",
+    "name": "hellobot",
     "version": "0.0.1",
     "description": "",
     "author": "",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "install:bot": "cd bot && npm install",
-        "installAll": "npm run install:bot"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
         "@microsoft/teamsfx-cli": "1.*"
