--- a/share-now/.vscode/tasks.json
+++ b/share-now/.vscode/tasks.json
@@ -58,7 +58,7 @@
             "options": {
                 "cwd": "${workspaceFolder}/api",
                 "env": {
-                    "PATH": "${env:PATH}${command:fx-extension.get-func-path}"
+                    "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
                 }
             },
             "presentation": {
