--- a/hello-world-tab-with-backend/.vscode/tasks.json
+++ b/hello-world-tab-with-backend/.vscode/tasks.json
@@ -52,7 +52,7 @@
             "options": {
                 "cwd": "${workspaceFolder}/api",
                 "env": {
-                    "PATH": "${env:PATH}${command:fx-extension.get-func-path}"
+                    "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
                 }
             },
             "presentation": {
