--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -70,7 +70,7 @@
             "options": {
                 "cwd": "${workspaceFolder}/api",
                 "env": {
-                    "PATH": "${env:PATH}${command:fx-extension.get-func-path}"
+                    "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
                 }
             },
             "presentation": {
