--- a/graph-toolkit-contact-exporter/tabs/package.json
+++ b/graph-toolkit-contact-exporter/tabs/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@fluentui/react-northstar": "^0.51.0",
-    "@microsoft/mgt-element": "2.4.1-next.teamsfx.c5a7f44",
-    "@microsoft/mgt-react": "2.4.1-next.teamsfx.c5a7f44",
-    "@microsoft/mgt": "2.4.1-next.teamsfx.c5a7f44",
-    "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.c5a7f44",
+    "@microsoft/mgt-element": "^2.5.0",
+    "@microsoft/mgt-react": "^2.5.0",
+    "@microsoft/mgt": "^2.5.0",
+    "@microsoft/mgt-teamsfx-provider": "^2.5.0",
     "@microsoft/teams-js": "^1.6.0",
     "@microsoft/teamsfx": "^1.0.0",
     "axios": "^0.21.1",
