chore(sharenow): remove resolution and add react path

--- a/share-now/tabs/tsconfig.json
+++ b/share-now/tabs/tsconfig.json
@@ -7,6 +7,9 @@
       "esnext",
       "ES2015"
     ],
+    "paths": {
+      "react": [ "./node_modules/@types/react" ]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
