Added functionality - Navigating within the app - Opening a link that was shared in the app:

--- a/deep-linking-hello-world-tab-without-sso-M365/templates/appPackage/manifest.template.json
+++ b/deep-linking-hello-world-tab-without-sso-M365/templates/appPackage/manifest.template.json
@@ -44,6 +44,15 @@
             "scopes": [
                 "personal"
             ]
+        },
+        {
+            "entityId": "tabdetails",
+            "name": "Tab Details",
+            "contentUrl": "{{{state.fx-resource-frontend-hosting.endpoint}}}{{{state.fx-resource-frontend-hosting.indexPath}}}/tabdetails",
+            "websiteUrl": "{{{state.fx-resource-frontend-hosting.endpoint}}}{{{state.fx-resource-frontend-hosting.indexPath}}}/tabdetails",
+            "scopes": [
+                "personal"
+            ]
         }
     ],
     "permissions": [
