Implemented App to Hub Scenario - Added use case to demonstrate to start group chat functionality

--- a/deep-linking-hello-world-tab-without-sso-M365/templates/appPackage/manifest.template.json
+++ b/deep-linking-hello-world-tab-without-sso-M365/templates/appPackage/manifest.template.json
@@ -62,6 +62,15 @@
             "scopes": [
                 "personal"
             ]
+        },
+        {
+            "entityId": "navigateWithinHub",
+            "name": "Navigate within hub",
+            "contentUrl": "{{{state.fx-resource-frontend-hosting.endpoint}}}{{{state.fx-resource-frontend-hosting.indexPath}}}/navigateWithinHub",
+            "websiteUrl": "{{{state.fx-resource-frontend-hosting.endpoint}}}{{{state.fx-resource-frontend-hosting.indexPath}}}/navigateWithinHub",
+            "scopes": [
+                "personal"
+            ]
         }
     ],
     "permissions": [
