--- a/graph-toolkit-one-productivity-hub/package.json
+++ b/graph-toolkit-one-productivity-hub/package.json
@@ -12,10 +12,5 @@
         "@microsoft/teamsfx-cli": "1.*"
     },
     "license": "MIT",
-    "dependencies": {
-        "@microsoft/mgt": "^2.5.2",
-        "@microsoft/mgt-element": "^2.5.2",
-        "@microsoft/mgt-react": "^2.5.2",
-        "@microsoft/mgt-teamsfx-provider": "^2.5.2"
-    }
+    "dependencies": {}
 }
