App name changes and gitignore updates

--- a/deep-linking-hello-world-tab-without-sso-M365/.fx/configs/projectSettings.json
+++ b/deep-linking-hello-world-tab-without-sso-M365/.fx/configs/projectSettings.json
@@ -1,5 +1,5 @@
 {
-    "appName": "NoneSSOTab",
+    "appName": "DeepLinking",
     "version": "2.1.0",
     "isFromSample": true,
     "solutionSettings": {
