--- a/deep-linking-hello-world-tab-without-sso-M365/templates/appPackage/manifest.template.json
+++ b/deep-linking-hello-world-tab-without-sso-M365/templates/appPackage/manifest.template.json
@@ -1,6 +1,6 @@
 {
-    "$schema": "https://raw.githubusercontent.com/OfficeDev/microsoft-teams-app-schema/preview/DevPreview/MicrosoftTeams.schema.json",
-    "manifestVersion": "m365DevPreview",
+    "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.13/MicrosoftTeams.schema.json",
+    "manifestVersion": "1.13",
     "version": "1.0.0",
     "id": "{{state.fx-resource-appstudio.teamsAppId}}",
     "packageName": "com.microsoft.teams.extension",
