Removed projectId field

--- a/deep-linking-hello-world-tab-without-sso-M365/.fx/configs/projectSettings.json
+++ b/deep-linking-hello-world-tab-without-sso-M365/.fx/configs/projectSettings.json
@@ -17,6 +17,5 @@
             "fx-resource-appstudio"
         ]
     },
-    "programmingLanguage": "typescript",
-    "projectId": "888e051f-587a-4e02-ba80-172aa85c9332"
+    "programmingLanguage": "typescript"
 }
