--- a/adaptive-card-notification/bot/package.json
+++ b/adaptive-card-notification/bot/package.json
@@ -32,7 +32,7 @@
     "chai": "^4.3.6",
     "env-cmd": "^10.1.0",
     "mocha": "^9.2.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~3.9.2"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
