--- a/hello-world-bot/bot/package.json
+++ b/hello-world-bot/bot/package.json
@@ -27,8 +27,8 @@
   "devDependencies": {
     "@types/restify": "8.4.2",
     "env-cmd": "^10.1.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~3.9.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4",
     "nodemon": "^2.0.7",
     "shx": "^0.3.3"
   }
