--- a/incoming-webhook-notification/incoming-webhook/package.json
+++ b/incoming-webhook-notification/incoming-webhook/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
-    "ts-node": "~9.1.1",
-    "typescript": "~3.9.2"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4",
   }
 }
