--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -31,7 +31,7 @@
         "@types/tedious": "^4.0.3",
         "env-cmd": "^10.1.0",
         "nodemon": "^2.0.7",
-        "ts-node": "~9.1.1",
-        "typescript": "~3.9.2"
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4",
     }
 }
