--- a/faq-plus/bot/package.json
+++ b/faq-plus/bot/package.json
@@ -43,7 +43,7 @@
         "eslint-plugin-prettier": "^3.4.0",
         "nodemon": "^2.0.7",
         "prettier": "^2.3.0",
-        "ts-node": "~9.1.1",
-        "typescript": "^3.9.9"
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4"
     }
 }
