--- a/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/.fx/configs/projectSettings.json
+++ b/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/.fx/configs/projectSettings.json
@@ -1,8 +1,7 @@
 {
     "appName": "OneProductivityHubAspNetCore",
-    "projectId": "eea820f6-485f-4136-978b-cc7c94afe764",
     "version": "2.1.0",
-    "isFromSample": false,
+    "isFromSample": true,
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
@@ -22,8 +21,6 @@
         ]
     },
     "programmingLanguage": "csharp",
-    "pluginSettings": {
-        "projectFilePath": "C:\\Users\\aycabas\\Documents\\GitHub\\TeamsFx-Samples\\graph-toolkit-one-productivity-hub-aspnetcore\\OneProductivityHubAspNetCore\\OneProductivityHubAspNetCore\\OneProductivityHubAspNetCore.csproj"
-    },
+    "pluginSettings": {},
     "isFirstTimeOpenProject": false
 }
