--- a/incoming-webhook-notification/incoming-webhook/package.json
+++ b/incoming-webhook-notification/incoming-webhook/package.json
@@ -22,6 +22,6 @@
   "devDependencies": {
     "nodemon": "^2.0.7",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.4.4"
   }
 }
