--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -32,6 +32,6 @@
         "env-cmd": "^10.1.0",
         "nodemon": "^2.0.7",
         "ts-node": "^10.4.0",
-        "typescript": "^4.4.4",
+        "typescript": "^4.4.4"
     }
 }
