--- a/graph-toolkit-contact-exporter/tabs/package.json
+++ b/graph-toolkit-contact-exporter/tabs/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fluentui/react-northstar": "^0.51.0",
-    "@microsoft/mgt-element": "^2.5.0",
-    "@microsoft/mgt-react": "^2.5.0",
-    "@microsoft/mgt": "^2.5.0",
-    "@microsoft/mgt-teamsfx-provider": "^2.5.0",
-    "@microsoft/teams-js": "^1.6.0",
-    "@microsoft/teamsfx": "^1.0.0",
+    "@fluentui/react-northstar": "^0.62.0",
+    "@microsoft/mgt-element": "2.4.1-next.teamsfx.8d56785",
+    "@microsoft/mgt-react": "2.4.1-next.teamsfx.8d56785",
+    "@microsoft/mgt": "2.4.1-next.teamsfx.8d56785",
+    "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.8d56785",
+    "@microsoft/teams-js": "^2.2.0",
+    "@microsoft/teamsfx": "2.0.0-beta.0",
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-csv": "^2.0.3",
