feat(share-now): update to use teamsjs v2

--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -6,8 +6,8 @@
     "@fluentui/react": "^7.115.4",
     "@fluentui/react-icons-northstar": "^0.49.0",
     "@fluentui/react-northstar": "^0.49.0",
-    "@microsoft/teams-js": "^1.10.0",
-    "@microsoft/teamsfx": "^1.0.0",
+    "@microsoft/teams-js": "^2.2.0",
+    "@microsoft/teamsfx": "2.0.0-beta.0",
     "@uifabric/icons": "^7.5.23",
     "axios": "^0.21.1",
     "bootstrap": "5.0.1",
