--- a/todo-list-with-Azure-backend-M365/tabs/package.json
+++ b/todo-list-with-Azure-backend-M365/tabs/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fluentui/react-northstar": "^0.51.0",
-    "@microsoft/teams-js": "^2.0.0",
-    "@microsoft/teamsfx": "^2.0.0-beta.0",
+    "@fluentui/react-northstar": "^0.62.0",
+    "@microsoft/teams-js": "^2.2.0",
+    "@microsoft/teamsfx": "2.0.0-beta.0",
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
