--- a/graph-connector-bot/.vscode/launch.json
+++ b/graph-connector-bot/.vscode/launch.json
@@ -9,7 +9,8 @@
             "presentation": {
                 "group": "remote",
                 "order": 1
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Launch Remote (Chrome)",
@@ -19,7 +20,8 @@
             "presentation": {
                 "group": "remote",
                 "order": 2
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Launch Bot (Edge)",
@@ -32,7 +34,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Launch Bot (Chrome)",
@@ -45,7 +48,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Attach to Bot",
