--- a/hello-world-in-meeting/.vscode/launch.json
+++ b/hello-world-in-meeting/.vscode/launch.json
@@ -9,7 +9,8 @@
             "presentation": {
                 "group": "remote",
                 "order": 1
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Launch Remote (Chrome)",
@@ -19,7 +20,8 @@
             "presentation": {
                 "group": "remote",
                 "order": 2
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Attach to Frontend (Edge)",
@@ -29,7 +31,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Attach to Frontend (Chrome)",
@@ -39,7 +42,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         }
     ],
     "compounds": [
