--- a/share-now/.vscode/launch.json
+++ b/share-now/.vscode/launch.json
@@ -9,7 +9,8 @@
             "presentation": {
                 "group": "remote",
                 "order": 1
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Launch Remote (Chrome)",
@@ -19,7 +20,8 @@
             "presentation": {
                 "group": "remote",
                 "order": 2
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Attach to Frontend (Edge)",
@@ -33,7 +35,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Attach to Frontend (Chrome)",
@@ -47,7 +50,8 @@
             "presentation": {
                 "group": "all",
                 "hidden": true
-            }
+            },
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": "Attach to Bot",
