--- a/query-org-user-with-message-extension-sso/.fx/configs/projectSettings.json
+++ b/query-org-user-with-message-extension-sso/.fx/configs/projectSettings.json
@@ -1,7 +1,7 @@
 {
     "appName": "QueryOrgUserWithMESSO",
     "version": "2.1.0",
-    "isFromSample": false,
+    "isFromSample": true,
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
