chore: add template in configuration file

--- a/todo-list-SPFx/SPFx/.yo-rc.json
+++ b/todo-list-SPFx/SPFx/.yo-rc.json
@@ -11,6 +11,7 @@
     "solutionShortDescription": "todo-list-sp-fx description",
     "skipFeatureDeployment": true,
     "isDomainIsolated": false,
-    "componentType": "webpart"
+    "componentType": "webpart",
+    "template": "react"
   }
 }
