chore: simple manifest in in-meeting app

--- a/hello-world-in-meeting/templates/appPackage/manifest.template.json
+++ b/hello-world-in-meeting/templates/appPackage/manifest.template.json
@@ -36,8 +36,7 @@
               "context": [
                 "meetingChatTab",
                 "meetingDetailsTab",
-                "meetingSidePanel",
-                "meetingStage"
+                "meetingSidePanel"
               ]
         }
     ],
